--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.2.6",
     "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -57,6 +59,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "semantic-release": "^22.0.12"
   }
 }
